--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,5 +18,15 @@
  @import "material_icons";
 
 
+ .card-chinema-info {
+	position: absolute;
+	bottom: 15%;
+}
+
+.chinema-name {
+	font-size: 18px;
+}
+
+
 
 
