--- a/app/views/chinemas/show.html.erb
+++ b/app/views/chinemas/show.html.erb
@@ -1,52 +1,69 @@
 
 
 <div class="row">
- <h3 class="center-align"><%= link_to @chinema.name, @chinema.url %></h3>
+ <h3 class="center-align"><%= link_to @chinema.chinema_name, @chinema.url %></h3>
   <div id="chinema_image" class="col l6 s12 left">
-    <% if chinema.chinema_image%>
+    <% if @chinema.chinema_image%>
       <%= image_tag @chinema.chinema_image.url %>
       <%else%>
       <%= image_tag 'no_image.png'%>
       <% end %>
+    <div class="card-content">
+    <p><%= simple_format @chinema.chinema_body %></p>
+    <div>
+    <h3>いいね件数: <%= @chinema.likes.count %></h3>
+    <% if current_user.already_liked?(@chinema) %>
+    <%= button_to 'いいねを取り消す', chinema_like_path(@chinema), method: :delete %>
+    <% else %>
+    <%= button_to 'いいね', chinema_likes_path(@chinema) %>
+    <% end %>
+
+    <h3>いいね件数: <%= @chinema.likes.count %></h3>
+<h2>いいねしたユーザー</h2>
+<% @chinema.liked_users.each do |user| %>
+  <li><%= user.email %></li>
+<% end %>
+
+   
+          </div>
+    </div>
     </div>
 
     <div id="chinema_info" class="col l6 s12 right" id="card_option">
-    <h6 class="center-align"><%= shop.address %></h6><br/>
-      
+     <h6 class="center-align"><%= @chinema.address %></h6><br/>
+      <div id="map" style="width100%; height: 380px"></div>
+      </div>
+    </div>
+        <script type="text/javascript">
+            function initMap() {
 
+                var test ={lat: <%= @chinema.latitude %>, lng: <%= @chinema.longitude %>};
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 16,
+                    center: test
+                });
+                var transitLayer = new google.maps.TransitLayer();
+                transitLayer.setMap(map);
 
-<div class="row">
-  <div class="col s12 m7">
-  <div class="card sticky-action">
-    <div class="card-image waves-effect waves-block waves-light">
-        <div id="map"></div>
+                var contentString = '住所：<%= @chinema.address %>';
+                var infowindow = new google.maps.InfoWindow({
+                    content: contentString
+                });
 
-        
+                var marker = new google.maps.Marker({
+                    position:test,
+                    map: map,
+                    title: "<%= @chinema.chinema_name %>"
+                });
 
-        <script>
-$(window).on('load', function() {
-    $('#shop_info .material-icons').removeClass('small');
-		$('#shop_info .material-icons').addClass('medium');
-});
-</script>
-<script>
-	function initMap() {
-	var latlng = new google.maps.LatLng(<%= @chinema.latitude %>,<%= @chinema.longitude %>);
+                marker.addListener('click', function() {
+                    infowindow.open(map, marker);
+                });
+            }
+        </script>
 
-	var map = new google.maps.Map(document.getElementById('map'), {
-		zoom: 16,
-		center: latlng
-	});
-
-	var marker = new google.maps.Marker({
-			position: latlng,
-			map: map,
-			title: "<%= @shop.name %>"
-		});
-	}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkI_thGt1jmgpsYsGf_Yl4WazAuv95TTs&callback=initMap" async defer></script>
-        
-        
+        <script async defer　
+        src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBkI_thGt1jmgpsYsGf_Yl4WazAuv95TTs&callback=initMap">
+        </script>
 
 
