--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,19 +1,16 @@
-
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Chinemappへようこそ!!</h1>
+        <h1 class="header center teal-text text-lighten-2">Chinemappへようこそ</h1>
         <div class="row center">
-        <h5 class="header col s12 light">好きな映画や映画館を共有しよう!!</h5>
-          <h5 class="header col s12 light"></h5>
+          <h5 class="header col s12 light">好きな映画や映画館を投稿しよう</h5>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">新規登録</a>
         </div>
         <br><br>
-
       </div>
     </div>
-    <div class="parallax"><img src="https://tetsu-smile.com/wp-content/uploads/2017/03/20170330234128.jpg"></div>
+    <div class="parallax"><img src="/assets/popcorn_image.png"></div>
   </div>
