--- a/app/assets/stylesheets/chinemas.scss
+++ b/app/assets/stylesheets/chinemas.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the chinemas controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+chinema_image img {
+	width: 100%;
+	height: 530px;
+	object-fit: cover;
+}
