--- a/app/views/chinemas/index.html.erb
+++ b/app/views/chinemas/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Chinemas#index</h1>
-<p>Find me in app/views/chinemas/index.html.erb</p>
+
+<% @chinemas.each do |chinema|%>
+ <div class="row">
+  <div id="chinema_image" class="col s12 m6 l3">
+    <div class="card medium">
+     <div class="card-image chinema-image">
+      <div id="chinemas_image">
+       <% if chinema.chinema_image%>
+        <%= image_tag chinema.chinema_image.url %>
+       <%else%>
+        <%= image_tag 'no_image.png'%>
+     <% end %>
+    </div>
+  </div>
+  
+      <div class="card-chinema-info">
+      <%= link_to chinema_path(chinema) do %>
+      <p class="chinema-name"><%= chinema.chinema_name %></p>  
+      <% end %>
+      </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
