--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
           <li><%= link_to "アカウント作成", new_user_registration_path(current_user) %></li>
           <li><%= link_to "ログイン", new_user_session_path %></li>
           <li><%= link_to "ログアウト", destroy_user_session_path %></li>
+          <li><%= link_to "映画一覧", movies_path %></li>
+          <li><%= link_to "シネマ一覧", chinemas_path %></li>
         </ul>
         <nav>
         <div class="container">
@@ -37,7 +39,7 @@
 					</ul>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
            <li>
-              <a class="dropdown-trigger" href="#!" data-target="dropdown1">機能一覧<i class="material-icons right">arrow_drop_down</i></a>
+              <a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons right">list</i></a>
           </li>
           </ul>
         </div>
